--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,9 +10,17 @@ tasks:
       cd $GOPATH/src/honnef.co/go/tools/cmd/staticcheck &&
       git checkout 2019.2 &&
       go get &&
-      go install
+      go install &&
+      cd /workspace/go/src/github.com/da-moon/coe817-dare &&
+      make build
 vscode:
   extensions:
     - wmaurer.change-case@1.0.0:EFbL568cjs07Ajw2vuXcpw==
     - emeraldwalk.RunOnSave@0.2.0:6DpPyy2kCQ1Ug+O4phQ/Lw==
     - vscode-snippet.snippet@0.8.0:heDB4eLEEI1w13OjYacLlQ==
+    - bungcip.better-toml@0.3.2:3QfgGxxYtGHfJKQU7H0nEw==
+    - kevinkyang.auto-comment-blocks@1.0.1:pNOhuU1hQbN6l84Rky73aw==
+    - micnil.vscode-checkpoints@1.3.0:dkiLAf0Y/WfLURngDOsDdA==
+    - humao.rest-client@0.23.2:EcQzdx/LsXrhATjZFVSutw==
+    - alefragnani.Bookmarks@11.0.0:m2p0avZpvPtfi0p13tawPA==
+    - lkytal.pomodoro@1.1.3:002RH2DJY9QFkufZ2J2U7w==
