--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -24,3 +24,12 @@ vscode:
     - humao.rest-client@0.23.2:EcQzdx/LsXrhATjZFVSutw==
     - alefragnani.Bookmarks@11.0.0:m2p0avZpvPtfi0p13tawPA==
     - lkytal.pomodoro@1.1.3:002RH2DJY9QFkufZ2J2U7w==
+    - ms-vsliveshare.vsliveshare-pack@0.3.2:0K1J2luvqWif20PhMHupAA==
+    - piotrpalarz.vscode-gitignore-generator@1.0.1:iNyE+Zbg+DD32/VtNMgUrg==
+    - aaron-bond.better-comments@2.0.5:YKNfOclR4e8XAxlj4xp2AA==
+    - lostintangent.vsls-pomodoro@0.1.0:1/5d7S1y4mmwTTNO0nr5KQ==
+    - lostintangent.vsls-whiteboard@0.0.9:slBjdTRB4bhjUi7La2CjQA==
+    - CodeStream.codestream@6.5.0:s+H7WY/FQ66qVvU5gAEkjQ==
+    - softwaredotcom.swdc-vscode@2.1.45:pmY4dKH5T5NIhWJJpHr5Gw==
+    - vsls-contrib.spaces@0.1.2:GhMWwlztJ60Jlwr4kKMEnA==
+    - wayou.vscode-todo-highlight@1.0.4:8IqxuxCVol2WnScJc5xVzg==
